--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body bgcolor="FF9900">
 	<h2>Zapraszam Na Mój kanał na youtube nagrywam na 
 	nim Stumble Guys oraz autobusy i tramwaje.</h2>
-	<h2>Kanał powstał 2 lipca 20237</h2>
+	<h2>Kanał powstał 2 lipca 2023</h2>
 	<a href="https://youtube.com/@Dzemik_official?si=nzxYcPg6EPsJtF1i"><h1>Strona Kanału</h1></a>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/A4pMF8N1qL8?si=71fC70O8fVHOpe8H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	
+	<h2>Najnowszy short</h2>
+	<a href="https://youtube.com/shorts/yHjGGPEgaG8?si=nRaxhf66slVRyANt">https://youtube.com/shorts/yHjGGPEgaG8?si=nRaxhf66slVRyANt</a>
 	</body>
 	 
