--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2>Kanał powstał 2 lipca 2023</h2>
 	<a href="https://youtube.com/@Dzemik_official?si=nzxYcPg6EPsJtF1i"><h1>Strona Kanału</h1></a>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/A4pMF8N1qL8?si=71fC70O8fVHOpe8H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	Jak ktoś chce mój nick w Stumble Guys:RTS|Ernesto
+	<h2>Jak ktoś chce mój nick w Stumble Guys:RTS|Ernesto</h2>
 	</body>
 </html>	
 	 
